--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "postcss": "8.4.32",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
-    "prisma": "5.7.1"
+    "prisma": "5.7.1",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4"
   }
 }
