--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma db push --accept-data-loss && next build",
-    "start": "next start",
+    "build": "next build",
+    "start": "npm run db:push && next start",
+    "db:push": "prisma db push --accept-data-loss || true",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
