--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "npm run db:push && next start",
-    "db:push": "prisma db push --accept-data-loss || true",
+    "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
